Implement setting for keyboard layout (QWERTY,QWERTZ,AZERTY)
Change-Id: I82d22e84d5104092d7d9d4851430f07911341c9a

--- a/res/xml/keyboard_settings.xml
+++ b/res/xml/keyboard_settings.xml
@@ -17,6 +17,14 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <ListPreference
+            android:key="keyboard_layout"
+            android:title="@string/keyboard_layout"
+            android:persistent="false"
+            android:entries="@array/keyboard_layout_entries"
+            android:entryValues="@array/keyboard_layout_values"
+            />
+
     <CheckBoxPreference
             android:key="auto_replace"
             android:title="@string/auto_replace"
