add notification light (back & home button)
Change-Id: I639aca316ce2f4395650b7a2f0cb8ede6a64056c

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -82,6 +82,13 @@
             android:summary="@string/notification_pulse_summary"
             android:persistent="false" />
 
+    <!-- RAB: added enabled option -->
+    <CheckBoxPreference
+            android:key="notification_enabled"
+            android:title="@string/notification_enabled_title"
+            android:summary="@string/notification_enabled_summary"
+            android:persistent="false" />
+
     <CheckBoxPreference
             android:key="notification_blink"
             android:title="@string/notification_blink_title"
