--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -137,4 +137,18 @@
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
 
+        <Preference android:key="device_modem_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/modem_version"
+                android:summary="@string/device_info_default"/>
+
+        <Preference android:key="device_factory_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/factory_version"
+                android:summary="@string/device_info_default"/>
+
+        <Preference android:key="device_hw_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/hw_version"
+                android:summary="@string/device_info_default"/>
 </PreferenceScreen>
