Implement setting for keyboard layout (QWERTY,QWERTZ,AZERTY)
Change-Id: I2c76fd3f376436ba0333dca6d40cb46b9712c1b8

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -449,4 +449,15 @@
         <item>Transparent</item>
     </string-array>
 
+    <string-array name="keyboard_layout_entries">
+        <item>QWERTY</item>
+        <item>QWERTZ</item>
+        <item>AZERTY</item>
+    </string-array>
+    <!-- The keylayout file is built as /system/usr/keylayout/%s.kl -->
+    <string-array name="keyboard_layout_values">
+        <item>eve_qwerty</item>
+        <item>eve_qwerty-qwertz</item>
+        <item>eve_qwerty-azerty</item>
+    </string-array>
 </resources>
